adding the second paragraphe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>hy everybody</h1>
     <p>salma salma</p>
+    <p>master master change</p>
 </body>
 </html>
